<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:rotationY="@integer/swipe_direction"
    tools:context=".views.fragments.HomeFragment">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:shimmer_direction="left_to_right"
        app:shimmer_repeat_mode="restart">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/first"
                layout="@layout/recipe_item_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/second"
                layout="@layout/recipe_item_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/first" />

            <include
                layout="@layout/recipe_item_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/second" />
        </RelativeLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/home_content"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recipes_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.gms.ads.AdView
                    android:id="@+id/ad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    ads:adSize="BANNER"
                    android:layout_marginTop="4dp"
                    ads:adUnitId="@string/ADMOB_BANNER_ID"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recipes_recyclerview" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/see_more"
                    style="@style/TabTitle"
                    ads:elevation="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:textAllCaps="false"
                    ads:backgroundTint="@color/colorAccent"
                    android:text="@string/see_more"
                    android:textColor="@android:color/white"
                    ads:cornerRadius="32dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    ads:icon="@drawable/more"
                    ads:iconGravity="start"
                    ads:iconTint="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ad" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/error_image"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_centerHorizontal="true"
            app:tint="@color/secondaryTextColor"
            android:src="@drawable/error" />

        <TextView
            android:id="@+id/error_text"
            style="@style/SecondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/error_image"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:text="@string/general_error"
            android:textAlignment="center" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
